fix(App): Increased graph stroke contrast

--- a/apps/app/styles/global.scss
+++ b/apps/app/styles/global.scss
@@ -68,6 +68,8 @@ a {
 [data-joy-color-scheme="dark"] {
   --toastify-color-progress-dark: #fff;
 
+  --graph-stroke: #888;
+
   .image--light {
     display: none;
   }
@@ -77,6 +79,8 @@ a {
   --toastify-color-dark: #fff;
   --toastify-color-progress-dark: #000;
   --toastify-text-color-dark: #333;
+
+  --graph-stroke: #666;
 
   .image--dark {
     display: none;
